--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,32 @@
-html,
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+html {
+  scroll-behavior: smooth;
+
+  --ff-primary: 'Kumbh Sans', sans-serif;
+
+  --primary-orange: #FF7D1A;
+  --pale-orange: #FFEDE0;
+  --very-dark-blue: #1D2025;
+  --dark-grayish-blue: #68707D;
+  --grayish-blue: #B6BCC8;
+  --light-grayish-blue: #F7F8FD;
+  --white: #fff;
+  --black: #000;
+}
+
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: var(--ff-primary);
+  overflow-x: hidden;
+  color: var(--black);
+  line-height: 1.6;
+  font-size: 16px;
 }
 
 a {
@@ -11,6 +34,22 @@ a {
   text-decoration: none;
 }
 
-* {
-  box-sizing: border-box;
+img {
+  display: block;
+  max-width: 100%;
+}
+
+.flex {
+  display: flex;
+}
+
+h1,
+h2,
+h3,
+p {
+  margin: 0;
+}
+
+ul {
+  padding: 0
 }
