--- a/styles/Nav.module.css
+++ b/styles/Nav.module.css
@@ -79,6 +79,19 @@
 .cart-button {
     min-width: 20px;
     height: auto;
+    position: relative;
+}
+
+.cart-button__badge {
+    z-index: 2;
+    font-size: 0.5rem;
+position: absolute;
+  top: -10px;
+  right: -5px;
+  padding: 2px 6px;
+  border-radius: 40%;
+  background: var(--primary-orange);
+  color: var(--white);
 }
 
 .avatar-container {
